--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==3.4.3
 idna==3.10
 psycopg2-binary==2.9.10
 python-dotenv==1.1.1
+RapidFuzz==3.13.0
 requests==2.32.5
 SQLAlchemy==2.0.43
 typing_extensions==4.14.1
